--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="caat_navbar">
+<div class="caat_navbar shadow">
 	<div class="row remove_row_margin align-items-center " style="height: 100%">
 		<div class="col-sm-2 nav_logo">
 			<a  href="index">
@@ -153,7 +153,27 @@
 					<div class="col-sm-8">
 						<div class="row">
 							<div class="col-sm-4 home_proj">
-								<a href="#"><img src="assets/images/home6.png"></a>	
+								<a href="dice.html"><img src="assets/images/dice/header.png"></a>	
+								<div class="home_projText">
+									<div class="home_projOrg">
+										<p>
+											led by caatprojects
+										</p>
+									</div>
+									<div class="home_projTitle">
+										<a href="dice.html">
+											DICE - Digital Intersectional Creative Education
+										</a>
+									</div>
+									<div class="home_projCode">
+										<p>
+											Code: 020-1-NL02-KA227-YOU-003340
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-4 home_proj">
+								<a href="#"><img src="assets/images/youthLab/header.png"></a>	
 								<div class="home_projText">
 									<div class="home_projOrg">
 										<p>
@@ -162,52 +182,32 @@
 									</div>
 									<div class="home_projTitle">
 										<a href="#">
-											Spaceship to a creative Europe
+											YouthLab 4 Participation
 										</a>
 									</div>
 									<div class="home_projCode">
 										<p>
-											Project code: 2018-3-NL02-KA105-002224
+											Code: 2021-1-NL02-KA154-YOU-000004972
 										</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-sm-4 home_proj">
-								<a href="#"><img src="assets/images/home6.png"></a>	
+								<a href="Allin"><img src="assets/images/allin/header.png"></a>	
 								<div class="home_projText">
 									<div class="home_projOrg">
 										<p>
-											together with hop and sinchi
+											Led by CAAT Projects
 										</p>
 									</div>
 									<div class="home_projTitle">
-										<a href="#">
-											Escape room for human rights
+										<a href="Allin">
+											All in the Same Boat
 										</a>
 									</div>
 									<div class="home_projCode">
 										<p>
-											local project in the Netherlands
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-4 home_proj">
-								<a href="#"><img src="assets/images/home6.png"></a>	
-								<div class="home_projText">
-									<div class="home_projOrg">
-										<p>
-											together with hop and sinchi
-										</p>
-									</div>
-									<div class="home_projTitle">
-										<a href="#">
-											placeholder title
-										</a>
-									</div>
-									<div class="home_projCode">
-										<p>
-											Project code: 2018-3-NL02-KA105-002224
+											Project code: 2016-2-NL02-KA105-001355
 										</p>
 									</div>
 								</div>
