--- a/project_template.html
+++ b/project_template.html
@@ -10,7 +10,7 @@
   	<link rel="stylesheet" href="assets/styles/bootstrap.css">
 </head>
 <body>
-	<div class="caat_navbar">
+	<div class="caat_navbar shadow">
 		<div class="row remove_row_margin align-items-center " style="height: 100%">
 			<div class="col-sm-2 nav_logo">
 				<a  href="index">
@@ -53,7 +53,7 @@
                     &#8592; Projects
                 </button>
             </div>
-            <div class="projectstmp_marginLeft">
+            <div class="projectstmp_margin">
                 <div class="projectstmp_title">
                     <p>YouthLab 4 Participation</p>
                 </div>
