--- a/projects.html
+++ b/projects.html
@@ -74,60 +74,60 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<div class="shadow p-3 bg-white rounded projects_box">
-					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<a href="LivingLand"><img src="assets/images/livingLand/header.png" class="projects_img"></a>
 					<div class="projects_org">
 						<p>
-							together with hop and sinchi
+							Led by Consorzio Consolida
 						</p>
 					</div>
 					<div class="projects_ititle">
-						<a href="#">
-							placeholder title
+						<a href="LivingLand">
+							Living Land
 						</a>
 					</div>
 					<div class="projects_code">
 						<p>
-							Project code: 2018-3-NL02-KA105-002224
+							Project code: 2019-2-IT03-KA205-016700
 						</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="shadow p-3 bg-white rounded projects_box">
-					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<a href="youthLab"><img src="assets/images/youthLab/header.png" class="projects_img"></a>
 					<div class="projects_org">
 						<p>
-							together with hop and sinchi
+							Led by CAAT Projects
 						</p>
 					</div>
 					<div class="projects_ititle">
-						<a href="#">
-							placeholder title
+						<a href="youthLab">
+							YouthLab 4 Participation
 						</a>
 					</div>
 					<div class="projects_code">
 						<p>
-							Project code: 2018-3-NL02-KA105-002224
+							Project code: 2021-1-NL02-KA154-YOU-000004972
 						</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="shadow p-3 bg-white rounded projects_box">
-					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<a href="dice"><img src="assets/images/dice/header.png" class="projects_img"></a>
 					<div class="projects_org">
 						<p>
-							together with hop and sinchi
+							Led by CAAT Projects
 						</p>
 					</div>
 					<div class="projects_ititle">
-						<a href="#">
-							placeholder title
+						<a href="dice">
+							DICE - Digital Intersectional Creative Education
 						</a>
 					</div>
 					<div class="projects_code">
 						<p>
-							Project code: 2018-3-NL02-KA105-002224
+							Project code: 020-1-NL02-KA227-YOU-003340
 						</p>
 					</div>
 				</div>
@@ -148,14 +148,14 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<div class="shadow p-3 bg-white rounded projects_box">
-					<a href="#"><img src="assets/images/caucan/projCaucan2.png" class="projects_img"></a>
+					<a href="Caucan"><img src="assets/images/caucan/projCaucan2.png" class="projects_img"></a>
 					<div class="projects_org">
 						<p>
 							Led by CAAT Projects
 						</p>
 					</div>
 					<div class="projects_ititle">
-						<a href="project_caucan">
+						<a href="Caucan">
 							CauCan - Counter and alternative 
 							narratives for human rights in the Caucasus
 						</a>
@@ -169,40 +169,40 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="shadow p-3 bg-white rounded projects_box">
-					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<a href="Allin"><img src="assets/images/allin/header.png" class="projects_img"></a>
 					<div class="projects_org">
 						<p>
-							together with hop and sinchi
+							Led by CAAT Projects
 						</p>
 					</div>
 					<div class="projects_ititle">
-						<a href="#">
-							placeholder title
+						<a href="Allin">
+							All in the Same Boat – Becoming an Activist Against Hate
 						</a>
 					</div>
 					<div class="projects_code">
 						<p>
-							Project code: 2018-3-NL02-KA105-002224
+							Project code: 2016-2-NL02-KA105-001355
 						</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="shadow p-3 bg-white rounded projects_box">
-					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<a href="participArt"><img src="assets/images/participArt/header.png" class="projects_img"></a>
 					<div class="projects_org">
 						<p>
-							together with hop and sinchi
+							Led by Hop
 						</p>
 					</div>
 					<div class="projects_ititle">
-						<a href="#">
-							placeholder title
+						<a href="participArt">
+							ParticipArt  for Urban Youth 
 						</a>
 					</div>
 					<div class="projects_code">
 						<p>
-							Project code: 2018-3-NL02-KA105-002224
+							Project code: 2019-2-NL02-KA205-002418
 						</p>
 					</div>
 				</div>
