--- a/dice.html
+++ b/dice.html
@@ -262,9 +262,9 @@
 				<div class="col-sm-4"></div>
 				<div class="col-sm-4">
 					<div class="row home_margTop5">
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/fb.png"></a></div>
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/insta.png"></a></div>
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/twitter.png"></a></div>
+						<div class="col-sm-4"><a href="https://facebook.com/caatprojects.eu"><img class="img-fluid" src="assets/images/fb.png"></a></div>
+						<div class="col-sm-4"><a href="https://instagram.com/caatprojects"><img class="img-fluid" src="assets/images/insta.png"></a></div>
+						<div class="col-sm-4"><a href="https://twitter.com/caatprojects"><img class="img-fluid" src="assets/images/twitter.png"></a></div>
 					</div>
 				</div>
 				<div class="col-sm-4"></div>
