--- a/youthLab.html
+++ b/youthLab.html
@@ -56,7 +56,7 @@
             <div class="projectstmp_margin">
                 <div class="projectsCaucan_title">
                     <p>
-                        YouthLab 4 Participation
+                        2DO - YouthLab 4 Participation
                     </p>
                 </div>
                 <div class="projectstmp_desc">
@@ -132,7 +132,7 @@
 
     <div class="container-fluid">
         <div class="embeded-video2 d-flex justify-content-center">
-            <embed src="https://www.youtube.com/embed/AZJ1zuTm8II" title="All in the Same Boat"
+            <embed src="https://www.youtube.com/embed/QItdhDGNZwc" title="2DO - YouthLab 4 Participation"
             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></embed>
         </div>
     </div>
@@ -222,9 +222,9 @@
 				<div class="col-sm-4"></div>
 				<div class="col-sm-4">
 					<div class="row home_margTop5">
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/fb.png"></a></div>
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/insta.png"></a></div>
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/twitter.png"></a></div>
+						<div class="col-sm-4"><a href="https://facebook.com/caatprojects.eu"><img class="img-fluid" src="assets/images/fb.png"></a></div>
+						<div class="col-sm-4"><a href="https://instagram.com/caatprojects"><img class="img-fluid" src="assets/images/insta.png"></a></div>
+						<div class="col-sm-4"><a href="https://twitter.com/caatprojects"><img class="img-fluid" src="assets/images/twitter.png"></a></div>
 					</div>
 				</div>
 				<div class="col-sm-4"></div>
