--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
 					</div>
 					<div class="projects_ititle">
 						<a href="youthLab">
-							YouthLab 4 Participation
+							2DO - YouthLab 4 Participation
 						</a>
 					</div>
 					<div class="projects_code">
@@ -240,9 +240,9 @@
 				<div class="col-sm-4"></div>
 				<div class="col-sm-4">
 					<div class="row home_margTop5">
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/fb.png"></a></div>
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/insta.png"></a></div>
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/twitter.png"></a></div>
+						<div class="col-sm-4"><a href="https://facebook.com/caatprojects.eu"><img class="img-fluid" src="assets/images/fb.png"></a></div>
+						<div class="col-sm-4"><a href="https://instagram.com/caatprojects"><img class="img-fluid" src="assets/images/insta.png"></a></div>
+						<div class="col-sm-4"><a href="https://twitter.com/caatprojects"><img class="img-fluid" src="assets/images/twitter.png"></a></div>
 					</div>
 				</div>
 				<div class="col-sm-4"></div>
