--- a/ANBI.html
+++ b/ANBI.html
@@ -67,20 +67,151 @@
 			<div class="col-sm-2"></div>
 			<div class="col-sm-8">
 				<p>
-					CAAT Projects heeft de ANBI-status (Algemeen Nut Beogende Instelling). 
-					Dit geeft een schenker de mogelijkheid om gebruik te maken van de belastingvoordelen van de geefwet. 
-					CAAT Projects staat geregistreerd als Stichting CAAT Projects Kamer van Koophandel: 
-					65047117 en RSIN/fiscaal belastingnummer is: 855960152. Afwezigheid van winstoogmerk:
-					De stichting beoogt niet het behalen van winst, zoals in de statuten is geschreven.
-					 De stichting zal de met de activiteiten behaalde opbrengsten ten goede laten komen aan de doelstelling van de stichting. 
-					 Standaard formulier publicatieplicht.
+					CAAT Projects heeft de ANBI-status (Algemeen Nut Beogende Instelling).
+					Dit geeft een schenker de mogelijkheid om gebruik te maken van de
+					belastingvoordelen van de geefwet. CAAT Projects staat geregistreerd als
+					Stichting CAAT Projects Kamer van Koophandel: 65047117 en RSIN/fiscaal
+					belastingnummer is: 855960152. Afwezigheid van winstoogmerk: De
+					stichting beoogt niet het behalen van winst, zoals in de statuten is
+					geschreven. De stichting zal de met de activiteiten behaalde opbrengsten ten
+					goede laten komen aan de doelstelling van de stichting. Standaard formulier
+					publicatieplicht.
+				</p>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+		<div class="row anbi_text2">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<p>
+					Stichting CAAT Projects
+				</p>
+				<p>
+					Het RSIN/Fiscaal nummer: 8559.60.152
+				</p>
+				<p>
+					KvK registratie nummer: 650477117
+				</p>
+				<p>
+					Het post en bezoekadres: Overtoom 301, 1054HW Amsterdam
+				</p>
+				<p>
+					Mobile telefoon: +31643582598
+				</p>
+				<p>
+					Email: andreia@caatprojects.eu
 				</p>
 			</div>
 			<div class="col-sm-2"></div>
 		</div>
 
 		<div class=" row anbi_subTitle">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-6">
+				<p>
+					Doelstelling
+				</p>
+			</div>
 			<div class="col-sm-3"></div>
+		</div>
+		<div class=" row anbi_text">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<p>
+					Volgens onze statuten zijn de doelen en methoden van CAAT de volgende:
+				</p>
+				<p>
+					1. De stichting heeft ten doel:
+				</p>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+		<div class=" row anbi_text2">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<p>
+					a. Bijdrage leveren aan de opkomst van een bekwame en kritische
+					samenleving
+				</p>
+				<p>
+					b. Bevorderen van veerkracht in kwetsbare groepen
+				</p>
+				<p>
+					c. Empowerment van sociaal buitengesloten groepen
+				</p>
+				<p>
+					d. Bijdrage leveren aan de integratie van kwetsbare groepen in de
+					samenleving
+				</p>
+				<p>
+					e. Samenwerken met andere lokale initiatieven die gemeenschappen
+					ondersteunen en bijdrage leveren aan hun activiteiten
+				</p>
+				<p>
+					f. Trainen van gemeenschaps- en jeugdleiders
+				</p>
+				<p>
+					g. Bouwen aan lange-termijn en duurzame veranderingen
+				</p>
+				<p>
+					h. Bevorderen van alternatieve en creatieve oplossingen
+				</p>
+				<p>
+					i. Bevorderen van kunst en cultuur
+				</p>
+				<p>
+					j. Bevorderen van diversiteit en multiculturaliteit
+				</p>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+		<div class=" row anbi_text">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<p>
+					2. De stichting tracht haar doel onder meer te verwezenlijken door:
+				</p>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+		<div class=" row anbi_text2">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<p>
+					a. Participatieve en creatieve methodieken
+				</p>
+				<p>
+					b. Gebruikmaken van kunst als instrument om te werken met
+					gemeenschappen		
+				</p>
+				<p>
+					c. Produceren van diverse (lokale) kunstuitingen
+				</p>
+				<p>
+					d. Ontwikkelen van vaardigheden en empowerment-programma&#39;s
+				</p>
+				<p>
+					e. Campagne voor mensenrechten
+				</p>
+				<p>
+					f. Train the trainer programma&#39;s
+				</p>
+				<p>
+					g. Monitoren, evalueren en leren van projecten
+				</p>
+				<p>
+					h. Organisatie van evenementen, workshops en festivals
+				</p>
+				<p>
+					i. Culturele uitwisselingsprogramma&#39;s
+				</p>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+
+
+		<div class=" row anbi_subTitle">
+			<div class="col-sm-2"></div>
 			<div class="col-sm-6">
 				<p>
 					Beleidsplan
@@ -96,31 +227,144 @@
 					Te verrichten werkzaamheden van de instelling:
 				</p>
 				<p>
-					De CAAT-Projects zal samenwerken met lokale en internationale projecten in de vorm van een partner organisatie of
-					 een coördinator. De projecten zijn alleen definitief als de financiele goedkeuring in orde is. 
-					 De projecten kunnen onderzoeks-, kunst-, integratie-, diversiteits-, ontwikkelings-, gendergelijkheid-, 
-					 vredes-, mensenrechten- of sociale interventie- projecten zijn. Daarnaast zijn het werven van fondsen, 
-					 netwerken, evenementen organiseren en trainen van jeugdleiders andere mogelijke werkzaamheden.  
+					De CAAT-Projects zal samenwerken met lokale en internationale projecten
+					in de vorm van een partner organisatie of een coördinator. De projecten zijn
+					alleen definitief als de financiele goedkeuring in orde is. De projecten kunnen
+					onderzoeks-, kunst-, integratie-, diversiteits-, ontwikkelings-,
+					gendergelijkheid-, vredes-, mensenrechten- of sociale interventie- projecten
+					zijn. Daarnaast zijn het werven van fondsen, netwerken, evenementen
+
+					organiseren en trainen van jeugdleiders andere mogelijke werkzaamheden.
+					In 2022 gaan we meer aandacht besteden aan onderwerpen als geestelijke
+					gezondheid en klimaatrechtvaardigheid, naast de sociale
+					rechtvaardigheidsthema&#39;s waar we mee werken.
+				</p>
+				<p>
+					Het uiteindelijke doel is om onze gemeenschappen te transformeren naar
+					een meer inclusieve en geaccepteerde plek.
+				</p>
+				<p>
+					Gedurende 2022 blijven we verwachten dat onze inkomsten komen uit
+					projecten die medegefinancierd worden door de Europese Unie, of direct als
+					projectcoördinator, of indirect via andere organisaties die de fondsen
+					ontvangen.
+				</p>
+				<p>
+					Lees voor meer informatie over ons beleidsplan voor 2022 het opgestelde
+					document:
 				</p>
 				<div class="anbi_link">
-					<a href="assets/anbi/Beleidsplan21" target="_blank">
-						Beleidsplan 2021
+					<a href="assets/anbi/Beleidspan22" target="_blank">
+						Beleidsplan 2022
 					</a>
-				</div>
-				<div class="anbi_link">
-					<a href="assets/anbi/Activiteitenverslag2020-2021" target="_blank">
-						Activiteitenverslag 2020-2021
-					</a>
-				</div>
-				
-				<br>
-				
+				</div>			
 			</div>
 			<div class="col-sm-2"></div>
 		</div>
 
 		<div class=" row anbi_subTitle">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-6">
+				<p>
+					Bestuurssamenstelling
+				</p>
+			</div>
 			<div class="col-sm-3"></div>
+		</div>
+		<div class=" row anbi_text">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<p>
+					Vanaf augustus 2022 ziet het CAAT-bestuur er als volgt uit:
+				</p>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+		<div class=" row anbi_text2">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<p>
+					Marzieh Dadvar – voorzitter
+				</p>
+				<p>
+					Joe Olan – penningmester
+				</p>
+				<p>
+					David Limaverde – secretaris
+				</p>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+		<div class=" row anbi_text">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<p>
+					Bovendien CAAT heeft Andreia Bessa als gevolmachtigde.
+				</p>
+
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+
+		<div class=" row anbi_subTitle">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-6">
+				<p>
+					Beloningsbeleid
+				</p>
+			</div>
+			<div class="col-sm-3"></div>
+		</div>
+		<div class=" row anbi_text">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<p>
+					Bestuur: De leden van het bestuur ontvangen geen beloning voor hun
+					werkzaamheden, zoals in de artikel 3.4 van de statuten is geschreven.
+					Onkosten, gemaakt in het kader van het uitoefenen van de bestuursfunctie
+					worden vergoed, mits niet bovenmatig. De stichting heeft in april 2021 een
+					persoon in dienst.
+				</p>
+				<p>
+					Personeel: Tot het eind van 2021, waren er twee personen werkzaam als
+					projectcoördinator en als administratieve medewerker, 18,5 uur per week,
+					met CAO regeling (sector 35). Vanaf 2022 heeft CAAT geen werknemers
+					meer, we werken in een regime van zzp’ers die op projectbasis worden
+					aangesteld.
+				</p>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+		
+		<div class=" row anbi_subTitle">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-6">
+				<p>
+					Activiteitenverslag
+				</p>
+			</div>
+			<div class="col-sm-3"></div>
+		</div>
+		<div class=" row anbi_text">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+				<p>
+					De meeste van onze projecten zijn langdurig en duren minimaal een paar
+					jaar. Het verslag wordt aan het einde van elk jaar bijgewerkt. Ondertussen
+					kunt u ook op de website kijken voor de belangrijkste projecten waar we
+					momenteel mee bezig zijn.
+				</p>
+				<div class="anbi_link">
+					<a href="assets/anbi/Activiteitenverslag2020-2021" target="_blank">
+						Activiteitenverslag 2020-2021
+					</a>
+				</div>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+
+		<div class=" row anbi_subTitle">
+			<div class="col-sm-2"></div>
 			<div class="col-sm-6">
 				<p>
 					Financieel plan
@@ -142,9 +386,11 @@
 			<div class="col-sm-2"></div>
 			<div class="col-sm-8">
 				<p>
-					Een deel van de projecten worden gefinancierd door Erasmus+ KA1Youth Workers Mobility of Erasmus+ KA2 
-					en de activiteiten zijn altijd afhankelijk van de financiële goedkeuring. Daarnaast proberen wij ook 
-					zelf sponsormogelijkheden te vinden voor de toekomstige CAAT-Projects projecten.
+					Een deel van de projecten worden gefinancierd door Erasmus+ KA1Youth
+					Workers Mobility of Erasmus+ KA2 en de activiteiten zijn altijd afhankelijk
+					van de financiële goedkeuring. Daarnaast proberen wij ook zelf
+					sponsormogelijkheden te vinden voor de toekomstige CAAT-Projects
+					projecten.
 				</p>
 			</div>
 			<div class="col-sm-2"></div>
@@ -163,13 +409,15 @@
 			<div class="col-sm-2"></div>
 			<div class="col-sm-8">
 				<p>
-					Alle projecten zullen door de project manager van de stichting georganizeerd worden, en de besluitvorming zal 
-					per project plaatsvinden in de algemene vergaderingen van de stichting. We kiezen alleen projecten via een 
-					proces waarbij ook wordt bevestigd dat het thema en de activiteiten van het project passen bij onze doelstellingen.
-					De CAAT-Projects zal niet meer vermogen aanhouden dan redelijkerwijs nodig is voor de continuïteit van de voorziene 
-					werkzaamheden. 
-					In lijn met de statuten is het toegestaan om verkregen vermogen door schenking in stand te houden indien de 
-					schenker dit heeft bepaald.
+					Alle projecten zullen door de project manager van de stichting georganizeerd
+					worden, en de besluitvorming zal per project plaatsvinden in de algemene
+					vergaderingen van de stichting. We kiezen alleen projecten via een proces
+					waarbij ook wordt bevestigd dat het thema en de activiteiten van het project
+					passen bij onze doelstellingen. De CAAT-Projects zal niet meer vermogen
+					aanhouden dan redelijkerwijs nodig is voor de continuïteit van de voorziene
+					werkzaamheden. In lijn met de statuten is het toegestaan om verkregen
+					vermogen door schenking in stand te houden indien de schenker dit heeft
+					bepaald.
 
 				</p>
 			</div>
@@ -189,14 +437,16 @@
 			<div class="col-sm-2"></div>
 			<div class="col-sm-8">
 				<p>
-					De boeken worden door de penningmeester aan het einde van het boekjaar afgesloten. 
-					De jaarrekening overzicht is gebaseerd op de winst- en verliesrekening, jaarrekening, balans, 
-					staat van baten en lasten voorbereid voor het desbetreffende boekjaar. Het bestuur zal alle documenten 
-					keuren en de samenvatting zullen op de website binnen zes maanden gepubliceerd. De meeste facturen worden 
-					rechtstreeks van de rekening betaald. Naast de projectgebonden kosten heeft CAAT Projects ook operationele 
-					kosten, zoals kantoorhuur, internet, telefoon en salariskosten. De overige kosten worden gebruikt om 
-					aanvullende activiteiten mogelijk te maken, die 
-					geen projectfinanciering ontvangen maar in lijn zijn met onze doelstellingen.
+					De boeken worden door de penningmeester aan het einde van het boekjaar
+					afgesloten. De jaarrekening overzicht is gebaseerd op de winst- en
+					verliesrekening, jaarrekening, balans, staat van baten en lasten voorbereid
+					voor het desbetreffende boekjaar. Het bestuur zal alle documenten keuren
+					en de samenvatting zullen op de website binnen zes maanden gepubliceerd.
+					De meeste facturen worden rechtstreeks van de rekening betaald. Naast de
+					projectgebonden kosten heeft CAAT Projects ook operationele kosten, zoals
+					kantoorhuur, internet, telefoon en salariskosten. De overige kosten worden
+					gebruikt om aanvullende activiteiten mogelijk te maken, die geen
+					projectfinanciering ontvangen maar in lijn zijn met onze doelstellingen.
 				</p>
 				<div class="anbi_link">
 					<a  href="assets/anbi/Jaarrekening2021" target="_blank">
